# quickfix

./: .clang-format  .clang-format-ignore  .gitignore  .travis.yml  AGENTS.md  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  ChangeLog  Doxyfile  INSTALL  LICENSE  LICENSE.h  LICENSE.rb  LICENSE.xml  LICENSE.xsl  MANIFEST  MANIFEST.in  Makefile.am  Makefile.in  NEWS  README  README.AIX  README.SSL  README.SunOS  README.md  SECURITY.md  THANKS  at.dsp  at.vcproj  at_client.dsp  at_client.vcproj  at_server.dsp  at_server.vcproj  autostyle.bat  bootstrap  build_java.bat  build_vc6.bat  build_vc7.bat  (+53 more)
UnitTest++/: CMakeLists.txt  Makefile  TestUnitTest++.vsnet2003.vcproj  TestUnitTest++.vsnet2005.vcproj  TestUnitTestPP_vs6.dsp  UnitTest++.vsnet2003.vcproj  UnitTest++.vsnet2005.vcproj  UnitTest++_vs10.vcxproj  UnitTest++_vs11.vcxproj  UnitTest++_vs12.vcxproj  UnitTest++_vs14.vcxproj  UnitTest++_vs15.vcxproj  UnitTest++_vs16.vcxproj  UnitTest++_vs17.vcxproj  UnitTest++_vs19.vcxproj  UnitTest++_vs8.vcproj  UnitTest++_vs9.vcproj  UnitTestPP_vs6.dsp  UnitTestPP_vs6.dsw
UnitTest++/src/: Checks.h  Config.h  ExecuteTest.h  Test.cpp  Test.h  TestMacros.h  TestReporterStdout.cpp  TestRunner.cpp  TestRunner.h
examples/: CMakeLists.txt  Makefile.am  Makefile.in  bootstrap  config.h.in  configure  configure.ac  configure.in  examples.dsw  examples.sln
examples/executor/: CMakeLists.txt  Makefile.am  Makefile.in  executor_cpp.dsp
examples/ordermatch/: Application.cpp  Application.h  CMakeLists.txt  IDGenerator.h  Makefile.am  Makefile.in  Market.cpp  Market.h  Order.h  OrderMatcher.h  example_ordermatch_vs10.vcxproj  example_ordermatch_vs11.vcxproj  example_ordermatch_vs12.vcxproj  example_ordermatch_vs14.vcxproj  example_ordermatch_vs15.vcxproj  example_ordermatch_vs16.vcxproj  example_ordermatch_vs17.vcxproj  example_ordermatch_vs19.vcxproj  example_ordermatch_vs6.dsp  example_ordermatch_vs7.vcproj  example_ordermatch_vs8.vcproj  example_ordermatch_vs9.vcproj  ordermatch.cpp  ordermatch.dsp  ordermatch.vcproj
examples/tradeclient/: Application.cpp  Application.h  CMakeLists.txt  Makefile.am  Makefile.in  example_tradeclient_vs10.vcxproj  example_tradeclient_vs11.vcxproj  example_tradeclient_vs12.vcxproj  example_tradeclient_vs14.vcxproj  example_tradeclient_vs15.vcxproj  example_tradeclient_vs16.vcxproj  example_tradeclient_vs17.vcxproj  example_tradeclient_vs19.vcxproj  example_tradeclient_vs6.dsp  example_tradeclient_vs7.vcproj  example_tradeclient_vs8.vcproj  example_tradeclient_vs9.vcproj  examples_tradeclient_vs7.vcproj  tradeclient.cpp  tradeclient.dsp  tradeclient.vcproj
examples/tradeclientgui/: Makefile.am  Makefile.in  run_banzai.sh
src/: .clang-format-ignore  ApplicationImpl.cs  AssemblyInfo.cs  CMakeLists.txt  DataDictionaryTest.cs  DataDictionayTest.cs  DictionaryTest.cs  FieldTest.cs  Makefile.am  Makefile.in  MessageTest.cs  OrderTest.cs  SessionSettingsTest.cs  TestSuite.h  at-py3.py  at.cpp  at.cs  at.java  at.py  at.rb  at_application.cs  at_application.h  at_application.java  at_application.py  at_application.rb  at_client.cpp  at_messagecracker.cs  at_messagecracker.java  at_server.cpp  at_vs6.dsp  at_vs7.vcproj  build.bat  build.sh  build.xml  config_windows.h  getopt-repl.h  getopt.c  pt.cpp  pt.cs  pt_vs6.dsp  (+58 more)
src/.NET/: Acceptor.h  Application.h  AssemblyInfo.cpp  AssemblyInfo.cs  CPPLog.h  CPPMessageStore.cpp  CPPMessageStore.h  DataDictionary.h  DataDictionaryProvider.h  DefaultMessageFactory.cs  DefaultMessageFactory.h  DeprecatedFields.h  Dictionary.h  Exceptions.h  FIX40_MessageCracker.cs  FIX40_MessageCracker.h  FIX40_MessageFactory.cs  FIX40_MessageFactory.h  FIX40_Messages.h  FIX41_MessageCracker.cs  FIX41_MessageCracker.h  FIX41_MessageFactory.cs  FIX41_MessageFactory.h  FIX41_Messages.h  FIX42_MessageCracker.cs  FIX42_MessageCracker.h  FIX42_MessageFactory.cs  FIX42_MessageFactory.h  FIX42_Messages.h  FIX43_MessageCracker.cs  FIX43_MessageCracker.h  FIX43_MessageFactory.cs  FIX43_MessageFactory.h  FIX43_Messages.h  FIX44_MessageCracker.cs  FIX44_MessageCracker.h  FIX44_MessageFactory.cs  FIX44_MessageFactory.h  FIX44_Messages.h  FIX50SP1_MessageCracker.cs  (+85 more)
src/C/: Makefile.am  Makefile.in  fix_application.h  fix_filestore.cpp  fix_filestore.h  fix_memorystore.cpp  fix_memorystore.h  fix_message.h  fix_messagestore.h  fix_sessionid.h  quickfix_api.cpp  quickfix_api.dsp  quickfix_api.dsw  quickfix_api.h
src/C++/: .clang-format-ignore  Acceptor.cpp  Acceptor.h  Allocator.h  Application.h  AtomicCount.h  CMakeLists.txt  CallStack.cpp  CallStack.h  ConfigLexer.cpp  ConfigLexer.h  ConfigLexer.ll  DOMDocument.h  DataDictionary.cpp  DataDictionary.h  DataDictionaryProvider.cpp  DataDictionaryProvider.h  DatabaseConnectionID.h  DatabaseConnectionPool.h  DeprecatedFieldNumbers.h  DeprecatedFields.h  DeprecatedValues.h  Dictionary.cpp  Dictionary.h  Event.h  Except.h  Exceptions.h  FIX40_MessageCracker.h  FIX40_Messages.h  FIX41_MessageCracker.h  FIX41_Messages.h  FIX42_MessageCracker.h  FIX42_Messages.h  FIX43_MessageCracker.h  FIX43_Messages.h  Field.h  FieldConvertors.cpp  FieldConvertors.h  FieldMap.cpp  FieldMap.h  (+161 more)
src/java/: Conversions.cpp  Conversions.h  JVM.cpp  JVM.h  JavaApplication.cpp  JavaApplication.h  JavaLog.cpp  JavaLog.h  JavaLogFactory.cpp  JavaLogFactory.h  JavaMessageStore.cpp  JavaMessageStore.h  JavaMessageStoreFactory.cpp  JavaMessageStoreFactory.h  Makefile  Makefile.am  Makefile.in  Stdafx.h  build.bat  build.properties  build.sh  build.xml  log4j.properties  org_quickfix_DataDictionary.cpp  org_quickfix_DataDictionary.h  org_quickfix_FileLog.cpp  org_quickfix_FileLog.h  org_quickfix_FileLogFactory.cpp  org_quickfix_FileLogFactory.h  org_quickfix_FileStore.cpp  org_quickfix_FileStore.h  org_quickfix_FileStoreFactory.cpp  org_quickfix_FileStoreFactory.h  org_quickfix_Group.cpp  org_quickfix_Group.h  org_quickfix_MemoryStore.cpp  org_quickfix_MemoryStore.h  org_quickfix_Message.cpp  org_quickfix_Message.h  org_quickfix_MySQLLog.cpp  (+113 more)
src/python/: .clang-format-ignore  CMakeLists.txt  Makefile.am  QuickfixPython.cpp  quickfix.i  (+22 more)
(+5481 files in other folders)
